--- a/build.yaml
+++ b/build.yaml
@@ -22,6 +22,8 @@ include:
     shield: corne_tp_left
   - board: nice_nano_v2
     shield: corne_tp_right
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
 
   # Settings Reset firmware
   # This will build a firmware that can wipe all settings from your
