--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -16,19 +16,19 @@
 
 /*		RIGHT HAND COMBOS		*/
 // Horizontal
-ZMK_COMBO(lpar,   &kp LPAR,       RM1 RM2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rpar,   &kp RPAR,       RM2 RM3,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lbkt,   &kp LBKT,       RT1 RT2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rbkt,   &kp RBKT,       RT2 RT3,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lbrc,   &kp LBRC,       RB1 RB2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rbrc,   &kp RBRC,       RB2 RB3,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(lpar,   &kp LPAR,       RM1 RM2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(rpar,   &kp RPAR,       RM2 RM3,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(lbkt,   &kp LBKT,       RT1 RT2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(rbkt,   &kp RBKT,       RT2 RT3,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(lbrc,   &kp LBRC,       RB1 RB2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(rbrc,   &kp RBRC,       RB2 RB3,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 // Vertical
 
 /*		LEFT HAND COMBOS		*/
 // Horizontal
-ZMK_COMBO(underscore,     &kp UNDERSCORE,   LT3 LT2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(minus,          &kp MINUS,        LT2 LT1,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(sqt,            &kp SQT,          LM3 LM2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(dqt,            &kp DQT,          LM2 LM1,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(plus,           &kp PLUS,         LB3 LB2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(equal,          &kp EQUAL,        LB2 LB1,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(underscore,     &kp UNDERSCORE,   LT3 LT2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(minus,          &kp MINUS,        LT2 LT1,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(sqt,            &kp SQT,          LM3 LM2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(dqt,            &kp DQT,          LM2 LM1,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(plus,           &kp PLUS,         LB3 LB2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+// ZMK_COMBO(equal,          &kp EQUAL,        LB2 LB1,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
