--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -14,6 +14,9 @@
 #define COMBO_IDLE_SLOW 50
 
 
+ZMK_COMBO(shift, &kp LSHIFT, LH0 RH0, BASE NUM NAV, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+
 /*		RIGHT HAND COMBOS		*/
 // Horizontal
 // ZMK_COMBO(lpar,   &kp LPAR,       RM1 RM2,     BASE LOWER UTILITY, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
